--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=ForoHub
+spring.datasource.url=jdbc:mysql://localhost/forohub_api
+spring.datasource.username=root
+spring.datasource.password=Pera608713*#
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
