--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,24 @@ spring.application.name=ForoHub
 spring.datasource.url=jdbc:mysql://localhost/forohub_api
 spring.datasource.username=root
 spring.datasource.password=Pera608713*#
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+api.security.secret=${JWT_SECRET:123456}
+hibernate.transaction.jta.platform=org.hibernate.jta.platform.internal.NoJtaPlatform
+logging.level.org.springframework.security=INFO
+logging.level.org.springframework.web=INFO
+logging.level.org.hibernate.type.descriptor.sql=INFO
+spring.security.filter.dispatcher-types=REQUEST
+server.error.include-stacktrace=never
+spring.jpa.open-in-view=false
+spring.mvc.throw-exception-if-no-handler-found=true
+spring.thymeleaf.check-template-location=false
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.thymeleaf.ThymeleafAutoConfiguration
+spring.security.filter.order=10
+server.servlet.context-path=/api
+logging.level.com.aluracursos.forohub=DEBUG
+server.error.include-message=always
+server.error.include-binding-errors=always
+spring.web.resources.add-mappings=false
