--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,6 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 api.security.secret=${JWT_SECRET:123456}
 hibernate.transaction.jta.platform=org.hibernate.jta.platform.internal.NoJtaPlatform
-logging.level.org.springframework.security=INFO
 logging.level.org.springframework.web=INFO
 logging.level.org.hibernate.type.descriptor.sql=INFO
 spring.security.filter.dispatcher-types=REQUEST
@@ -22,4 +21,9 @@ server.servlet.context-path=/api
 logging.level.com.aluracursos.forohub=DEBUG
 server.error.include-message=always
 server.error.include-binding-errors=always
-spring.web.resources.add-mappings=false
+
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.api-docs.path=/api-docs
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
+logging.level.org.springframework.security=DEBUG
